# mario-fake

./: .gitignore  CMakeLists.txt  LICENSE.md  config.json  full_config.json
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Ecs/: CMakeLists.txt
src/Ecs/Components/: BaseComponentStorage.h  ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp  EntityId.h
src/Ecs/Filter/: Filter.h  FilterBuilder.cpp  FilterBuilder.h  OptimisedFilter.cpp  OptimisedFilter.h  SparseFilter.cpp  SparseFilter.h
src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp  SystemsManager.h
src/Ecs/World/: IWorldInternal.h  World.cpp  World.h
src/GameEngine/: GameEngine.cpp  GameEngine.h  GameEngineConfiguration.h  Scene.cpp  Scene.h
src/GameEngine/Assets/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h
src/GameEngine/Input/: InputAction.h  InputManager.cpp  InputManager.h
src/Objects/: Config.cpp  Config.h  Drawer.cpp  Drawer.h  Gui.cpp  Gui.h  MyGame.h  Randomiser.cpp  Randomiser.h  Timer.cpp  Timer.h
src/Sample/: ButtonEvents.cpp  ButtonEvents.h
src/Sample/Components/: AnimationStateComponent.h  AnimatorComponent.h  AsteroidComponent.h  BaseSpeedComponent.h  BoxColliderComponent.h  BreakableComponent.h  BulletComponent.h  ButtonComponent.h  CameraComponent.h  CircleColliderComponent.h  CollisionComponent.h  CollisionEventComponent.h  FinishComponent.h  GravityComponent.h  KillMeComponent.h  MoveInputEventComponent.h  MovementComponent.h  PlayerComponent.h  PositionComponent.h  RotateComponent.h  ShootEventComponent.h  SoundEventComponent.h  SpriteComponent.h  TextComponent.h
src/Sample/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Sample/Systems/: AdditionalControlSystem.cpp  AdditionalControlSystem.h  AnimationSystem.cpp  AnimationSystem.h  BrickDestructionSystem.cpp  BrickDestructionSystem.h  BulletDeleteSystem.cpp  BulletDeleteSystem.h  ButtonStateSystem.cpp  ButtonStateSystem.h  CameraFollowXSystem.cpp  CameraFollowXSystem.h  CleanerSystem.cpp  CleanerSystem.h  ColliderSystem.cpp  ColliderSystem.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  DrawSystem.cpp  DrawSystem.h  EndGameSystem.cpp  EndGameSystem.h  FallingSystem.cpp  FallingSystem.h  FinishSystem.cpp  FinishSystem.h  GameInitSystem.cpp  GameInitSystem.h  GuiSystem.cpp  GuiSystem.h  HitSystem.cpp  HitSystem.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  KillerSystem.cpp  KillerSystem.h  MenuInitSystem.cpp  MenuInitSystem.h  (+30 more)
